Fixed alignment on home slider

--- a/stylesheet/responsive.css
+++ b/stylesheet/responsive.css
@@ -287,7 +287,7 @@
   .article-container {
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 140px 140px;
-    padding-top: 81px;
+    padding-top: 3px;
     grid-gap: 15px;
   }
 
